chamber/styles/directory.css
/* main {
    display: block;
    flex-direction: column;
    width: 100%;
    margin auto;
} */

#directoryButton {
    display: flex;
    justify-content: center;
    width: 97%;
    margin-top: 15px;
    margin-left: 12px;
}

#directoryButton img {
    padding: 0px 10px;
}

button {
    margin: 5px;
}

h3 {
    font-style: bold;
    margin-bottom: 5px;
}

#businessDirectory {

}

.grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-gap: 1rem;
    grid-template-rows: auto;
    justify-content: center;
    row-gap: 5px;
    column-gap: 10px;
    padding: 20px;
    margin: 0 auto;

}

.list section {
    display: grid;
    grid-template-columns: 1fr 2px 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    justify-content: stretch;
    align-items: stretch;
    border: 2px solid orange;
    box-shadow: none; 
    text-align: left;

}

.list .businessName {
    display: block;
    grid-column-start: 1;
    font-style: normal;
    margin: 0px;
    background-color: white;
    border: 2px solid orange;
}

.list .businessIcon {
    display: none;
    border: 2px solid orange;
    grid-column-start: 2;
}

.list .street {
    display: block;
    grid-column-start: 3;
    border: 2px solid orange;
}

.list .region {
    display: block;
    grid-column-start: 4;
    border: 2px solid orange;
}

.list .phone {
    display: block;
    grid-column-start: 5;
    border: 2px solid orange;
}

.list .website {
    display: block;
    grid-column-start: 6;
    margin: 0px;
    border: 2px solid orange;
}

.list a, list p {
    display: block;
    margin: 0px;
    word-wrap: break-word;
    line-height: 0;
}

a, p {
    display: flex;
    justify-content: flex-start;
    margin-bottom: 15px;
    overflow-wrap: break-word;
    line-height: 0.3;
}



.list img {
    visibility: hidden;
    width: 0px;
    height: 0px;
    margin: 0px;
}

.individualBusinesses {
    display: flex;
    justify-content: center;
    height: 300px;
} 

a, p {
    display: flex;
    justify-content: center;
    margin-bottom: 15px;
    overflow-wrap: break-word;
    line-height: 0.3;
}

.businessIcon{
    display: block;
    margin: auto;
}

